Add Gray Matter to Workspace recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["vsls-contrib.gistfs", "foam.foam-vscode"]
+  "recommendations": [
+    "vsls-contrib.gistfs",
+    "foam.foam-vscode",
+    "philipbe.theme-gray-matter"
+  ]
 }
